# cchive

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.spec-workflow/specs/active-account-capture/: design.md  requirements.md  tasks.md
.spec-workflow/specs/active-account-capture/Implementation Logs/: task-1_2026-06-28T2010_9c64e553.md
.spec-workflow/specs/agents-commands-skills/: design.md  requirements.md  tasks.md
.spec-workflow/specs/agents-commands-skills/Implementation Logs/: task-1_2026-06-28T0658_fbfb0388.md  task-4_2026-06-28T0658_c038c92f.md
.spec-workflow/specs/app-shell-navigation/: design.md  requirements.md  tasks.md
.spec-workflow/specs/app-shell-navigation/Implementation Logs/: task-10_2026-06-28T0241_c853ff0c.md  task-1_2026-06-28T0240_94dcd06a.md  task-5_2026-06-28T0241_887e8744.md
.spec-workflow/specs/arch-pacman-package/: design.md  requirements.md  tasks.md
.spec-workflow/specs/arch-pacman-package/Implementation Logs/: task-1_2026-06-29T2030_03b21c64.md
.spec-workflow/specs/claude-data-core/: design.md  requirements.md  tasks.md
.spec-workflow/specs/claude-data-core/Implementation Logs/: task-3_2026-06-28T0329_78d6daa4.md  task-7_2026-06-28T0330_dec9c814.md  task-8_2026-06-28T0330_24829e72.md
.spec-workflow/specs/collection-and-mcp/: design.md  requirements.md  tasks.md
.spec-workflow/specs/collection-and-mcp/Implementation Logs/: task-1_2026-06-28T0625_ca3dfd9c.md  task-3_2026-06-28T0625_bd930b64.md
.spec-workflow/specs/config-editor/: design.md  requirements.md  tasks.md
.spec-workflow/specs/config-editor/Implementation Logs/: task-1_2026-06-28T0505_985e4801.md  task-5_2026-06-28T0506_b533315e.md
.spec-workflow/specs/configurations-keyring/: design.md  requirements.md  tasks.md
.spec-workflow/specs/configurations-keyring/Implementation Logs/: task-1_2026-06-28T0417_33a607f8.md  task-3_2026-06-28T0417_1d9abd94.md  task-7_2026-06-28T0417_5b8de328.md
.spec-workflow/specs/design-system-foundation/: design.md  requirements.md  tasks.md
.spec-workflow/specs/experimental-and-settings/: design.md  requirements.md  tasks.md
.spec-workflow/specs/import-export-backups-latency/: design.md  requirements.md  tasks.md
.spec-workflow/specs/memory-and-projects/: design.md  requirements.md  tasks.md
.spec-workflow/specs/notifications-hook/: design.md  requirements.md  tasks.md
.spec-workflow/specs/overview-dashboard/: design.md  requirements.md  tasks.md
.spec-workflow/specs/polish-and-release/: design.md  requirements.md  tasks.md
.spec-workflow/specs/sidebar-footer-display/: design.md  requirements.md  tasks.md
.spec-workflow/specs/startup-and-nav-perf/: design.md  requirements.md  tasks.md
.spec-workflow/specs/tray-autostart-packaging/: design.md  requirements.md  tasks.md
.spec-workflow/specs/usage-analytics/: design.md  requirements.md  tasks.md
.spec-workflow/steering/: product.md  roadmap.md  structure.md  tech.md
docs/: architecture.md
packaging/arch/: PKGBUILD  cchive.desktop  clavis.desktop
scripts/: build-arch-pkg.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  model.rs  tray.rs
src-tauri/src/commands/: accounts.rs  activity.rs  app_prefs.rs  backups.rs  codex.rs  latency.rs  mcp.rs  memory.rs  mod.rs  notifications.rs  portable.rs  projects.rs  providers.rs  resources.rs  settings.rs  usage.rs
src-tauri/src/core/: activity.rs  atomic_fs.rs  backups.rs  claude_json.rs  codex.rs  codex_provider.rs  credentials.rs  keyring_store.rs  latency.rs  mcp.rs  memory.rs  mod.rs  notify_hook.rs  paths.rs  portable.rs  projects.rs  providers.rs  resources.rs  settings.rs  switch.rs  usage.rs  usage_cache.rs
src/app/: AccountSwitcher.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ScreenHeader.tsx  Sidebar.test.tsx  Sidebar.tsx  StatusBar.tsx  Window.test.tsx  Window.tsx  router.test.ts  router.ts  useGlobalData.test.tsx  useGlobalData.ts  useGlobalShortcuts.ts
src/i18n/: i18n.test.ts  index.ts
src/i18n/locales/: en.json  fr.json  ja.json  zh-Hans.json  zh-Hant.json
src/lib/: cn.ts  ipc.test.ts  ipc.ts  prefs.ts  queries.test.ts  queries.ts  shell-types.ts  store.test.ts  store.ts  types.ts  usageCache.ts  window.ts
src/screens/: registry.tsx
src/screens/_collection/: CardView.tsx  Collection.test.tsx  Collection.tsx  DetailView.tsx  TableView.tsx  types.ts  useResourceEditor.tsx
src/screens/_gallery/: Gallery.tsx
src/screens/agents/: Agents.test.tsx  index.tsx
src/screens/commands/: index.tsx
src/screens/config-editor/: ConfigEditor.test.tsx  FieldRow.tsx  SectionNav.tsx  index.tsx  schema.ts
src/screens/configurations/: AccountRow.tsx  AddAccountModal.test.tsx  AddAccountModal.tsx  CodexAccountRow.tsx  CodexProviderForm.tsx  CodexProviderRow.tsx  Configurations.test.tsx  CreateProviderForm.tsx  EnvOverrideBanner.tsx  NewProviderMenu.tsx  ProviderRow.tsx  index.tsx
src/screens/experimental/: Experimental.test.tsx  index.tsx
src/screens/mcp/: Mcp.test.tsx  McpServerForm.tsx  index.tsx
src/screens/memory/: Memory.test.tsx  index.tsx
src/screens/notifications/: Notifications.test.tsx  index.tsx
src/screens/overview/: Overview.test.tsx  index.tsx
src/screens/projects/: Projects.test.tsx  index.tsx
src/screens/settings/: DataBackups.test.tsx  Settings.test.tsx  index.tsx
src/screens/skills/: Skills.test.tsx  index.tsx
src/screens/usage/: Usage.test.tsx  index.tsx
src/styles/: global.css
src/test/: setup.ts
src/theme/: ThemeProvider.tsx  fonts.css  theme.test.ts  theme.ts  tokens.css
src/ui/: Badge.tsx  Button.test.tsx  Button.tsx  Card.tsx  CodeEditor.tsx  IconButton.tsx  Input.tsx  Logo.tsx  MarkdownEditor.tsx  Modal.tsx  Popover.tsx  Radio.tsx  SegmentedControl.test.tsx  SegmentedControl.tsx  Select.tsx  StatTile.tsx  Switch.tsx  Toast.tsx  Tooltip.tsx  icons.tsx
src/ui/charts/: Heatmap.tsx  ModelBars.tsx  OutputBars.tsx
(+21 files in other folders)
