[package]
name = "cchive"
version = "0.1.0"
description = "cchive"
edition = "2021"
rust-version = "1.77.2"

# The library powering the desktop binary; the GUI entry point lives in main.rs.
[lib]
name = "cchive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2.4.3"
# Desktop notifications for the Notifications screen's Test action.
tauri-plugin-notification = "2.3.3"
# Opens the "Report an issue" link in the user's default browser (Settings screen).
tauri-plugin-opener = "2"
# Native open/save file dialogs for the Settings "Data & backups" export/import.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
# preserve_order keeps unknown keys in their original position when we re-serialize
# Claude's JSON files (G11: never drop future keys we don't model).
serde_json = { version = "1", features = ["preserve_order"] }
dirs = "5"
thiserror = "2"
# Streaming usage parser: recursive *.jsonl walk + ISO-8601 → local-date bucketing.
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# Bounded endpoint latency probe (no auth header). rustls-tls keeps TLS in
# RustCrypto so the binary has no OpenSSL runtime dependency (matches the keyring
# crypto-rust choice); blocking drives its own internal runtime off a worker thread.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
# OS keyring for cchive's own account vault.
#   Linux  -> persistent Secret Service (GNOME Keyring / KWallet) via
#            dbus-secret-service. `vendored` statically links libdbus from source
#            (libdbus-sys/vendored), so the shipped binary has NO runtime libdbus
#            dependency — this also covers tao/Tauri's own libdbus use on Linux.
#            `crypto-rust` keeps the encrypted-session crypto in RustCrypto
#            (OpenSSL is only a lockfile resolution candidate; it is never built).
#   macOS  -> Keychain (apple-native); Windows -> Credential Manager (windows-native).
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
    "vendored",
] }

[dev-dependencies]
tempfile = "3"

# Single-instance + autostart are desktop-only. Single-instance is registered
# first in the builder; autostart powers the Settings "Launch at login" toggle.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-autostart = "2.5.1"
